crates/pipdock-cli/tests/snapshots/golden__help.snap
---
source: crates/pipdock-cli/tests/golden.rs
expression: "stdout_of(&[\"--help\"])"
---
Inspect, install, update and clean up Python packages in bulk.
Every mutating operation is previewed and snapshotted first.

Usage: pipdock [OPTIONS] <COMMAND>

Commands:
  env          Manage environments
  list         List installed packages
  search       Fuzzy-search the local PyPI name index
  info         Show cached PyPI metadata for a package
  install      Install packages
  update       Update packages
  uninstall    Remove packages, guarded by the reverse-dependency check
  pin          Manage the per-environment pin list
  snapshot     Manage snapshots
  doctor       Engine check and environment sanity report
  health       Run Code Health (deptry / vulture / ruff) over a project folder
  pip-upgrade  Upgrade pip inside the selected environment
  engine       Show or set the configured engine
  index        Index maintenance
  schema       Print the JSON Schema for a core type so scripts can pin against it
  self         Self-service helpers
  help         Print this message or the help of the given subcommand(s)

Options:
      --env <PATH>
          Interpreter or environment directory. Defaults to the last used env, else an auto-detected `.venv` in the working directory

      --engine <ENGINE>
          Override the configured engine for this invocation

          Possible values:
          - pip: `<python> -m pip`
          - uv:  `uv pip --python <python>`

      --json
          Machine-readable output; NDJSON for streaming commands

  -y, --yes
          Assume defaults on all prompts. Conflicts resolve to *skip*, never *force*

      --quiet
          Reduce log output

      --verbose
          Increase log output

      --log-file <PATH>
          Tee logs to a file

      --no-snapshot
          DANGEROUS: skip the pre-batch snapshot. CI images only; prints a warning.
          
          This is the sole documented escape from DATA-FLOW §9.2, and it exists because a throwaway CI container has nothing to roll back to.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
